Implementing a "bit of a bug" with the CSS for disabling scrolling (overflow-hidden and co.) not getting applied whatever I do ...

--- a/blocker.css
+++ b/blocker.css
@@ -37,7 +37,9 @@
     color: var(--accent-color);
 }
 
-body.site-is-blocked {
+/*.site-is-blocked*/
+/*body:has(#blockerBanner)*/
+.whiy-is-this-not-working {
     overflow: hidden !important;
     height: 100% !important;
 }
